<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainContent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navbar"
        android:layout_marginBottom="45dp"
        android:layout_alignParentTop="true" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <!-- ///////////////////////////////////////////////// -->
            <!-- //////////////////TAB 1////////////////////////// -->
            <!-- ///////////////////////////////////////////////// -->

            <LinearLayout
                android:id="@+id/tab1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="70dp" >

                <ScrollView
                    android:id="@+id/Tab1Scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NameOfRecipe"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/NameOfRecipe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/NameOfRecipe" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mealtype"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Spinner
                            android:id="@+id/RecipeType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/TypeOfRecipe" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CookingTime"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:orientation="horizontal"
                            android:weightSum="2" >

                            <EditText
                                android:id="@+id/Hours"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left"
                                android:hint="@string/Hours"
                                android:inputType="number" />

                            <EditText
                                android:id="@+id/Minutes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left"
                                android:hint="@string/Minutes"
                                android:inputType="number" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Serves"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/PortionSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/PortionSize"
                            android:inputType="number" />
                        
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <!-- ///////////////////////////////////////////////// -->
            <!-- //////////////////TAB 2////////////////////////// -->
            <!-- ///////////////////////////////////////////////// -->

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/tab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="70dp" >

                <ScrollView
                    android:id="@+id/scrollView1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TableLayout
                            android:id="@+id/IngredientsTable"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="vertical" >

                            <TableRow
                                android:id="@+id/Ingredients1"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false" >

                                <EditText
                                    android:id="@+id/IngredientBox0"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/Ingredient"
                                    android:inputType="text" />

                                <Button
                                    android:id="@+id/EditButton0"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/Edit"
                                    android:visibility="invisible" />

                            </TableRow>

                            <TableRow
                                android:id="@+id/Amount1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false" >

                                <EditText
                                    android:id="@+id/AmountBox0"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/Quantity"
                                    android:inputType="number"
                                    android:visibility="visible" />

                                <Button
                                    android:id="@+id/RemoveButton0"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/Remove"
                                    android:visibility="invisible" />
                            </TableRow>

                            <TableRow
                                android:id="@+id/Measurement1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false" >

                                <Spinner
                                    android:id="@+id/WeightMeasurement0"
                                    style="@android:style/Widget.Spinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:entries="@array/WeightMeasurement"
                                    android:prompt="@string/Measurement" />
                            </TableRow>

                        </TableLayout>

                        <Button
                            android:id="@+id/AddIngredients"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/AddIngredient" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <!-- ///////////////////////////////////////////////// -->
            <!-- //////////////////TAB 3////////////////////////// -->
            <!-- ///////////////////////////////////////////////// -->

            <LinearLayout
                android:id="@+id/tab3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingTop="70dp" >

                <EditText
                    android:id="@+id/MethodBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/Method"
                    android:inputType="textMultiLine" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
            
            <!-- ///////////////////////////////////////////////// -->
            <!-- //////////////////TAB 4////////////////////////// -->
            <!-- ///////////////////////////////////////////////// -->

            <LinearLayout
                android:id="@+id/tab4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingTop="70dp" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Seasonal"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/Season"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Seasonal" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Region"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/Region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Region" />
                
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Video"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/Videolink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Video" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TakePhoto"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/ImageUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="listenerOfPhotoButton"
                    android:text="@string/Photo" />

            </LinearLayout>
        </FrameLayout>
    </TabHost>

        <Button
            android:id="@+id/UploadButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="listenerOfUploadButton"
            android:text="@string/Upload" />

</RelativeLayout>