<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="25dp"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/viewRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center"
        android:padding="3dp"
        android:text="@string/hello123"
        android:textSize="30sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/quichehealthyeatingphotosmall" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_star" />

        <Button
            android:id="@+id/ShareToFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/facebook" />
        
            <Button
                android:id="@+id/ShareToTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/twitter" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="center" >

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/new2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/mealtype"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/viewMealType"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/hello123" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/new3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/duration" android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/viewDuration"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/hello123" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/new4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/timeofyear" android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/viewTimeOfYear"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/hello123" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/new5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/region" android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/viewRegion"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/hello123" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="Number Of"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="Ingredients:"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/new6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/hello123" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/new1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/method"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewMethod"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/hello123" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>